# mandelbrot

./: .gitignore  CMakeLists.txt  LICENSE  README.md  mandelbrot-double.cu  mandelbrot.cu  multibrot.cu  negabrot.cu
